introducing --third-dir-path and --test-dir-path to streamcorpus_pipeline, and using them in the integration tests performed by streamcorpus_pipeline/tests/*sh which are now pytest.mark.integration and executed by streamcorpus_pipeline_test

--- a/streamcorpus_pipeline/tests/configs/john-smith-lingpipe-from-chunk.yaml
+++ b/streamcorpus_pipeline/tests/configs/john-smith-lingpipe-from-chunk.yaml
@@ -36,7 +36,7 @@ streamcorpus_pipeline:
 
   lingpipe:
     exit_code_on_out_of_memory: 1
-    pipeline_root_path: third
+    path_in_third: lingpipe-4.1.0
     offset_types: [BYTES]
     offset_debugging: false
     cleanup_tmp_files: false
