--- a/streamcorpus_pipeline/tests/configs/john-smith-lingpipe.yaml
+++ b/streamcorpus_pipeline/tests/configs/john-smith-lingpipe.yaml
@@ -6,31 +6,14 @@ streamcorpus_pipeline:
   ## are not an absolute path, i.e. start with '/'
   root_path: 
 
-  ## pipeline expects strings over stdin, which are typically paths to
-  ## streamcorpus.Chunk files.  They can also be some other kind of
-  ## opaque byte strings delimited by newlines that your particular
-  ## 'reader' is expecting.
-
-  ## put logs inside each chunk file
-  embedded_logs: true
-
   log_level: DEBUG
 
   output_chunk_max_count: 197
-
-  ## the main pipeline log_dir_path can trigger similar log chunk
-  log_dir_path: data/john-smith/
 
   ## tmp_dir_path, some readers and writers require this dir to be in
   ## the same file system as their output.  This is also where the
   ## batch_transforms operate.
   tmp_dir_path: tmp
-
-  ## task_queue specifies the strings that are passed to an reader
-  ## to obtain a Chunk.  The strings might be paths in a file system
-  ## or some other source of data.  The task_queue might simply be
-  ## stdin, or it might be a more sophisticated shared queue.
-  task_queue: stdin
 
   ## generator of StreamItems
   reader: john_smith
@@ -49,7 +32,7 @@ streamcorpus_pipeline:
 
   lingpipe:
     exit_code_on_out_of_memory: 1
-    pipeline_root_path: third
+    path_in_third: lingpipe-4.1.0
     offset_types: [BYTES]
     offset_debugging: false
     cleanup_tmp_files: false
