--- a/streamcorpus_pipeline/tests/configs/john-smith-serif-streamcorpus_generate_serifxml.yaml
+++ b/streamcorpus_pipeline/tests/configs/john-smith-serif-streamcorpus_generate_serifxml.yaml
@@ -26,7 +26,7 @@ streamcorpus_pipeline:
 
   serif:
     exit_code_on_out_of_memory: 1
-    pipeline_root_path: /opt/diffeo/third/serif/serif-latest
+    path_in_third: serif/serif-latest
     cleanup_tmp_files: true
     tmp_dir_path: tmp
 
