--- a/streamcorpus_pipeline/tests/configs/john-smith-serif.yaml
+++ b/streamcorpus_pipeline/tests/configs/john-smith-serif.yaml
@@ -17,7 +17,7 @@ streamcorpus_pipeline:
     output_name: "john-smith-tagged-by-serif-%(first)s-%(num)s"
 
   serif:
-    pipeline_root_path: /opt/diffeo/third/serif/serif-latest
+    path_in_third: serif/serif-latest
     cleanup_tmp_files: false
     par: streamcorpus_one_step
     align_labels_by: names_in_chains
