adding file to MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ include RELEASE-VERSION
 include version.py
 include LICENSE.txt
 include README.md
+include data/john-smith/john-smith-tagged-by-lingpipe-serif-0-197.sc.xz
