restoring MANIFEST.in files

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,6 @@ include version.py
 include LICENSE.txt
 include README.md
 include data/john-smith/john-smith-tagged-by-lingpipe-serif-0-197.sc.xz
+recursive-include data/john-smith/original *
+recursive-include data/john-smith/test *
+recursive-include examples *.yaml *.py
