adding "title" to john-smith test case

--- a/streamcorpus_pipeline/tests/configs/john-smith.yaml
+++ b/streamcorpus_pipeline/tests/configs/john-smith.yaml
@@ -19,7 +19,9 @@ streamcorpus_pipeline:
   ## generator of StreamItems
   reader: john_smith
 
-  incremental_transforms: []
+  incremental_transforms: [
+    title,
+  ]
 
   batch_transforms: []
 
