Add some extra documentation about the `external_stages_path` config option.

--- a/streamcorpus_pipeline/tests/configs/john-smith-with-labels-from-tsv.yaml
+++ b/streamcorpus_pipeline/tests/configs/john-smith-with-labels-from-tsv.yaml
@@ -15,6 +15,9 @@ streamcorpus_pipeline:
   ## batch_transforms operate.
   tmp_dir_path: tmp
 
+  # Loads the Python file given and looks for a `Stages` module variable.
+  # `Stages` should be a map from stage name to a Python class. This will
+  # bring those stages into scope for use with, e.g., `reader`.
   external_stages_path: examples/john_smith_custom_reader.py
 
   ## generator of StreamItems
